made changes to the buttons

--- a/css/templatemo-ebook-landing.css
+++ b/css/templatemo-ebook-landing.css
@@ -14,8 +14,8 @@ https://templatemo.com/tm-588-ebook-landing
   --primary-color:                #E76F51;
   --secondary-color:              #E9C46A;
   --section-bg-color:             #f0f8ff;
-  --custom-btn-bg-color:          #F4A261;
-  --custom-btn-bg-hover-color:    #E76F51;
+  --custom-btn-bg-color:          #E76F51;
+  --custom-btn-bg-hover-color:    #000000;
   --dark-color:                   #000000;
   --p-color:                      #717275;
   --link-hover-color:             #E76F51;
